syntax = "proto3";

package searcher;

option go_package = "/searcher";

import "ent/doc.proto";
import "ent/term_query.proto";

message DocId {
  string Id = 1;
}

message AffectedCount {
  int32 Count = 1;
}

message SearchRequest {
  ent.TermQuery Query = 1;
  uint64 OnFlag = 2;
  uint64 OffFlag = 3;
  repeated uint64 OrFlags = 4;
}

message SearchResult {
  repeated ent.Document Documents = 1;
}

message CountRequest {}

service SearchService {
  rpc Search(SearchRequest) returns (SearchResult);
  rpc Delete(DocId) returns (AffectedCount);
  rpc Add(ent.Document) returns (AffectedCount);
  rpc Count(CountRequest) returns (AffectedCount);
}

// protoc --go_out=. --go-grpc_out=. --proto_path=./searcher search.proto -I=.
